Heri | #3127 & #3122 | Updating & fixing alignement on pricing page

--- a/datawinners/media/css/scss/pricing.scss
+++ b/datawinners/media/css/scss/pricing.scss
@@ -170,3 +170,7 @@ h1 {
     font-weight: bold;
     font-family: Helvetica, Arial, sans-serif;
 }
+
+.account_type_box{
+    height: 398px !important;
+}
