--- a/datawinners/media/css/scss/util_public.css
+++ b/datawinners/media/css/scss/util_public.css
@@ -141,3 +141,9 @@ span.tooltip {
 
 .none {
   display: none; }
+
+.padding_left_10 {
+  padding-left: 10px !important; }
+
+.padding_right_10 {
+  padding-right: 10px !important; }
